# sdformat-net

./: .gitignore  CHANGELOG.md  README.md  build_native.sh  package.json
Documentation~/: index.md
Plugins/x86_64/: libgz-math7.so.7  libgz-utils2.so.2  libsdformat14.so.14  liburdfdom_model.so.4.0
Samples~/Unity/: SdfLoader.cs
SdFormat.Net/: Enums.cs  MathTypes.cs  SdFormat.Net.asmdef  SdFormat.Net.csproj  SdfCollision.cs  SdfFrame.cs  SdfGeometry.cs  SdfJoint.cs  SdfJointAxis.cs  SdfLight.cs  SdfLink.cs  SdfMaterial.cs  SdfModel.cs  SdfRoot.cs  SdfSensor.cs  SdfVisual.cs  SdfWorld.cs
SdFormat.Net/Interop/: NativeMethods.cs  NativeStringHelper.cs
sdformat_native~/: CMakeLists.txt  sdformat_shim.cpp  sdformat_wrapper.cpp
